projects/compiler/test/parser/export_error_before_invalid_statement.out
Error at %FILE_NAME%:1:5
Unexpected token 'while', expected one of 'val', 'var', 'func', 'type', 'enum', 'decorator':
  |  pub while true {}
         ^